making drug title display block to avoid wrapping

--- a/app/shared/components/Typography/style.scss
+++ b/app/shared/components/Typography/style.scss
@@ -117,6 +117,7 @@ h1.az-page-title {
     margin-top: 0;
     margin-bottom: 10px;
     margin-right: 10px;
+    display: block;
   }
 }
 
